test/spec_vectors/memory64/ok/module_1.wat
(module (memory i64 0 1))