test/spec_vectors/memory64/fail/module_18.wat
(module (memory i64 1 0))